samples/_failures_safe/1761089626_fa1b3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e18858bb.c: In function ‘print_state’:
./samples/SAFE/__tmp_e18858bb.c:160:16: error: missing terminating " character
  160 |         printf("Current
      |                ^~~~~~~~
./samples/SAFE/__tmp_e18858bb.c:160:9: error: expected expression at end of input
  160 |         printf("Current
      |         ^~~~~~
./samples/SAFE/__tmp_e18858bb.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e18858bb.c:160:9: error: expected declaration or statement at end of input
